fix(ui-forms): Select input shouldn't be wrapped w/label
refs: INSTUI-851

Test Plan:
- Ensure Select behaves before with no regressions
- Verify that the Select options are navigable via
  Jaws and the options are not continuously repeated

Reviewed-on: https://gerrit.instructure.com/153694
Product-Review: Jennifer Stern <jstern@instructure.com>
Product-Review: Ken Meleta <kmeleta@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>
Tested-by: Jenkins

--- a/packages/ui-forms/src/components/Select/SelectField/styles.css
+++ b/packages/ui-forms/src/components/Select/SelectField/styles.css
@@ -135,4 +135,14 @@ input[type].input {
   fill: var(--iconColor);
 }
 
+.label {
+  all: initial;
+  font-family: inherit;
+  font-weight: inherit;
+  font-size: inherit;
+  line-height: inherit;
+  margin: 0;
+  text-align: inherit;
+}
+
 /* stylelint-enable selector-max-class */
